grammer.txt
program        -> declaration* EOF
declaration    -> varDecl
                | statement
varDecl        -> "var" IDENTIFIER ( "=" expression)? ";"
statement      -> exprStmt
                | printStmt
                | block
                | ifStatement
                | whileStatement
                | forStatement
                | functionStatement
                | returnStatement

functionStatement  -> "fun" IDENTIFIER "(" IDENTIFIER? (,IDENTIFIER)* ")" block ;                
block          -> "{" declaration* "}"
exprStmt       -> expression ";"                
printStmt      -> "print" expressions ";" 
ifStatement    -> "if" "(" expression ")" statement
                   ( "else" statement)? ;
whileStatement  -> "while" "(" expression ")" statement ;                   
forStatement    -> "for" "(" (varDecl | exprStmt | ";")
                    expression? ";"
                    expression? ")" statement ;
returnStatement ->  "return" exprStmt ;                   
expression     → assignment ;
assignment     -> IDENTIFIER "=" assignment
                | logic_or
logic_or       -> logic_and ( "or" logic_and)*;
logic_and      -> equality ("and" equality)* ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary | call 
call           -> primary ( "(" arguments? ")" )*
arguments      -> expression ( "," expression ) *
primary        → NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")"
               | IDENTIFIER
